--- a/public/css/src/app/app_header.css
+++ b/public/css/src/app/app_header.css
@@ -9,9 +9,9 @@
 	left: 0;
 	background: #191919;
 	z-index: 100;
-}
+} 
 
-.app-header__splitter {position: absolute;width: 100%;top: 54px;background: #33AFFF;height: 6px;display: none;}
+.app-header__splitter {position: absolute;width: 100%;top: 54px;background: #33AFFF;height: 4px;/* display: none; */}
 .app-header__logo {margin-left: 100px;width: 40px;text-align: center;}
 
 .app-header__logo img {margin-top: 10px;}
