--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-flow: row;
 	justify-content: center;
+	align-items: flex-start;
 }
 .picture {
    position: relative;
@@ -20,13 +21,11 @@
    box-shadow: 0 0 10px #CCCCDC;
 }
 
-.picture:hover .picture-icon {
-    opacity: 1;
-}
 
 .picture.--main {
-   transform: scale(1.2);
-   margin: 0 30px;
+   transform: scale(1.1);
+   margin-left: 10px;
+   margin-right: 10px;
 }
 
 .picture-icon {
@@ -41,8 +40,14 @@
     opacity: 0;
     cursor: pointer;
 }
+
+
+.picture-icon:hover {
+    opacity: 1;
+}
+
  
-.picture__icon {
+.picture__icon { 
    width: 50%;
    display: flex;
    justify-content: center;
@@ -50,8 +55,10 @@
    font-size: 24px;
    border: 1px solid #BDBDBD;
    box-sizing: border-box;
-   color: white; 
+   color: white;
    border: 1px solid;
+   position: relative;
+   cursor: pointer;
 }
 .picture__icon:hover {
     background: rgba(255,255,255,.2);
@@ -71,11 +78,90 @@
     border-right: none;
 }
 
+.pictures .cloudinary-fileupload { 
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   opacity: 0.01;
+   cursor: pointer!important;
+}
 
+.hashtag {
 
+}
 
+.picture__hashtag {display: flex;align-items: center;width: 100%;overflow: hidden;justify-content: center;flex-flow: row wrap;}
 
+.hashtag__hash {
+  font-weight: bolder;
+  font-size: 20px;
+  color: #33AFFF;
+}
 
+.hashtag span {
+
+}
+
+.hashtag input {padding: 5px 0px;border: none;font-size: 12px;font-weight: bolder;width: 150px;outline: none;cursor: pointer;background: none;transition: all ease-in .15s;}
+
+.hashtag input.--active {
+  background: rgba(51, 175, 255, 0.08);
+  border-bottom: 1px solid #B0E0FF;
+  padding-left: 8px;
+}
+
+.hashtag-action {
+  display: none;
+  width: 100%;
+  justify-content: flex-end;
+  padding-right: 10px;
+  margin-top: 12px;
+}
+
+.hashtag-action.--pending {
+  opacity: .4!important;
+}
+
+.hashtag-action > div {
+  font-size: 12px;
+  width: 25px;
+  height: 25px;
+  border-radius: 30px;
+  border: 1px solid;
+  box-sizing: border-box;
+  padding-top: 5px;
+  margin: 0 2px;
+  position: relative;
+  top: -2px;
+}
+
+.hashtag__action-validate {
+}
+.hashtag__action-cancel {
+
+}
+
+.picture__progress-bar {
+  width: 100%;
+  position: absolute;
+  height: 6px;
+  top: -12px;
+  left: -1px;
+  z-index:10;
+  /* border: 1px solid #CCC; */
+  border-radius: 10px;
+  overflow: hidden;
+  display: none;
+}
+ 
+.picture__progress-bar-bg {
+  width: 0%;
+  height: 100%;
+  background: #eee;
+  transition: all ease-in 1s;
+}
 
 
 
@@ -202,13 +288,4 @@
    position: absolute;
    top: 0;
    left: 0;
-}
-
-.pictures .cloudinary-fileupload {
-   width: 35px;
-   height: 30px;
-   position: absolute;
-   top: -5px;
-   left: 3px;
-   opacity: 0.01;
 }
