--- a/public/css/src/app/app_ux.css
+++ b/public/css/src/app/app_ux.css
@@ -69,7 +69,9 @@
 /* App modals and popup */
 
 .modal {background: white;border-radius: 10px;padding: 10px 10px 20px 10px;color: #191919;width: 400px;display: flex;flex-flow: column nowrap;}
-
+.modal.--facebook {
+    padding: 10px 30px;
+}
 .modal-content {
 
 }
@@ -78,9 +80,9 @@
 
 .modal-subheader {color: #919191;padding: 0 30px;text-align: center;font-weight: 300;line-height: 18px;font-size: 16px;}
 
-.modal-body {min-height: 160px;margin: 20px 0;padding: 0 16px;display: flex;flex-flow: row wrap;overflow: hidden;align-items: flex-start;}
+.modal-body {min-height: 160px;max-height: 300px;margin: 20px 0;padding: 0 16px;display: flex;flex-flow: row wrap;overflow: hidden;align-items: flex-start;outline: none;}
 
-.modal-footer {min-height: 60px;display: flex;justify-content: center;align-items: center;}
+.modal-footer {min-height: 100px;display: flex;justify-content: center;align-items: center;}
 .modal__title {font-family: 'Creamy Script';     font-size: 40px;}
 .modal__title h1 {
 
@@ -91,7 +93,7 @@
 
 }
 
-.modal-footer button.--rounded {width: 80px;height: 80px;border-radius: 100px;border: none;background: #33AFFF;}
+.modal-footer button.--rounded {width: 80px;height: 80px;border-radius: 100px;color: #33AFFF;background: white;border: 4px solid;}
 
 .modal-footer button.--squared {
    
@@ -100,17 +102,48 @@
 .modal__loader {
    margin: auto;
 }
-.modal-footer i {font-size: 32px;color: white;}
+.modal-footer i {font-size: 28px;}
 
+
+.modal.--facebook:not(.--active) .modal-footer {
+    opacity: .2;
+}
+
+.modal.--facebook:not(.--active) button {
+    color: #919191;
+    cursor: default; 
+}
 
 .modal__facebook-picture {
    display: none;
    /* margin: 4px; */
    /* border: 1px solid #eee; */
-   /* padding: 6px; */
+   padding: 2px 4px;
    cursor: pointer;
    width: 33.333333%;
+   box-sizing: border-box;
 }
+
+.modal__facebook-picture .modal__picture-icon {
+   display: none;
+   transition: all ease-in-out .2s;
+   position: absolute;
+   bottom: 12px;
+   right: 10px;
+   height: 30px;
+   width: 30px;
+   border-radius: 30px;
+   background: #33AFFF;
+   color: white;
+   box-sizing: border-box;
+}
+.modal__picture-icon i {
+    margin: auto;
+}
+.modal__facebook-picture.--active .modal__picture-icon {
+   display: flex;
+}
+
 
 .modal__facebook-picture img {width: 100%;}
 
