--- a/public/css/src/profile/profile.css
+++ b/public/css/src/profile/profile.css
@@ -57,8 +57,8 @@
   font-size: 30px;
   top: 6px;
   padding-top: 13px;
-  color: #33AFFF;
-  border: 2px solid;
+  color: #454545;
+  border: 2px solid #33AFFF;
   background: white;
   box-sizing: border-box;
   border-radius: 100px;
