--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -234,22 +234,22 @@
         <ul>
           <li class="app__menu-item active">
             <a href="#profile">
-              <i class="app__menu-icon icon icon-user"></i>
+              <i class="app__menu-icon icon icon-menu"></i>
             </a>
           </li>
           <li class="app__menu-item">
             <a href="#map">
-              <i class="app__menu-icon icon icon-glass"></i>
+              <i class="app__menu-icon icon icon-drinks"></i>
             </a>
           </li>
           <li class="app__menu-item">
             <a href="#notifications">
-              <i class="app__menu-icon icon icon-bell-alt"></i>
+              <i class="app__menu-icon icon icon-bell"></i>
             </a>
           </li>
           <li class="app__menu-item">
             <a href="#search">
-              <i class="app__menu-icon icon icon-search"></i>
+              <i class="app__menu-icon icon icon-search-zoom"></i>
             </a>
           </li>
         </ul>
@@ -281,48 +281,48 @@
         <div class="profile-section__splitter"></div>
         <div class="profile-section__body --me">
           <div class="me__input me__input-name" data-param="name">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-pricetag"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__name" data-lid="p_name_label"></label>
             <input readonly class="me__input-field" data-lid="p_name_placeholder" id="me__name" type="text">
             <div class="me__input-explanation" data-lid="p_name_explanation"></div>
           </div>
           <div class="me__input me__input-age" data-param="age">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-gift"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__age" data-lid="p_age_label"></label>
             <input readonly class="me__input-field" data-lid="p_age_placeholder" id="me__age"type="number">
             <div class="me__input-explanation" data-lid="p_age_explanation"></div>
           </div>
           <div class="me__input me__input-country me__input--no-edit">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-flag"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__country" data-lid="p_country_label"></label>
             <input readonly class="me__input-field" type="text" id="me__country">
             <div class="me__input-explanation" data-lid="p_country_explanation"></div>
           </div>
           <div class="me__input me__input-job" data-param="job">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-education"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__job" data-lid="p_job_label"></label>
             <input readonly class="me__input-field" data-lid="p_job_placeholder" id="me__job" type="text">
             <div class="me__input-explanation" data-lid="p_job_explanation"></div>
           </div>
           <div class="me__input me__input-location" data-param="location">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-location"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__location" data-lid="p_location_label"></label>
             <input readonly class="me__input-field" type="text" id="me__location">
             <div class="me__input-explanation" data-lid="p_location_explanation"></div>
           </div>
           <div class="me__input me__input-ideal-night" data-param="ideal_night">
-            <i class="icon icon-user"></i>
-            <i class="me__action-validate me__input-action icon icon-ok"></i>
+            <i class="icon icon-dj"></i>
+            <i class="me__action-validate me__input-action icon icon-check"></i>
             <i class="me__action-cancel me__input-action icon icon-cancel"></i>
             <label for="me__ideal-night" data-lid="p_ideal_night_label"></label>
             <textarea readonly class="me__input-field" data-lid="p_ideal_night_placeholder" id="me__ideal-night">
